# DataMedic

./: README.md  pyproject.toml
datasets/: custom_duplicates.csv
src/: __init__.py  data_organizer.py  data_preprocessor.py
src/cleanops/: __init__.py  data_getter.py  data_output.py  data_preprocessor.py
test/: Test.ipynb  Untitled.ipynb  cleaned_data.csv  report.txt
test/.ipynb_checkpoints/: cleaned_data-checkpoint.csv
