[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamedic"                # â† PULIHI ug unique name
version = "0.1.0"
description = "A lightweight data cleaning and inspection toolkit."
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Odchigue, Jave Melchor P."
           "Angni, Sodais M.",
           "Ruiz, Rynzo Rapheal R.",
           "Padillo, Reymart",
           "Magtrayo, Harold Hope"}
]

dependencies = [
    "pandas"
]

license = {text = "MIT"}

[tool.setuptools]
package-data = {}
packages = ["datamedic"]
